updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>First, I was a musician. Then, I was a philsopher. Now, I'm learning to be a web developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Kalamazoo, MI</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy recording, performing, and listening to music, reading and writing philosophy, and playing with my adorable cat, Euthyphro.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Being paid to do things I enjoy doing. </p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Kalamazoo, MI</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I want to be a part of a growing and secure field, and I look forward to all of the opportunities that come with being a competent web developer.</p>
     </section>
 
     <footer id="footer">
